<!--
  ~ Copyright 2021 Christian Eppler
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">ESPresso32</string>
    <string name="title_activity_calibrate">CalibrateActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="calibration_set_manual">Set calibration value manual:</string>
    <string name="calibration_set_determined">Set determined calibration value.</string>
    <string name="calibration_value">Calibration value:</string>
    <string name="calibration_start_value">Calibration start value:</string>
    <string name="calibration_set_value">Set calibration value.</string>
    <string name="calibration_auto">Auto Calibration:</string>
    <string name="calibration_weight">Calibration weight:</string>
    <string name="weight_unit">g</string>
    <string name="start">START</string>
    <string name="save">SAVE</string>
    <string name="calibration_start">Start auto calibration.</string>
    <string name="status">Status:</string>
    <string name="modus">Modus:</string>
    <string name="weight">Weight:</string>
    <string name="coffee_out">Coffee out:</string>
    <string name="coffee_in">Coffee in:</string>
    <string name="time">Time:</string>
    <string name="set">Set</string>
    <string name="enable">Enable</string>
    <string name="ble_enable">Please enable bluetooth</string>
    <string name="gps_enable">Please enable gps\nNeeded for bluetooth device scan</string>
    <string name="info">Information</string>
    <string name="about">About</string>
    <string name="timeline">Timeline</string>
    <string name="calibration">Calibration</string>
    <string name="settings">Settings</string>
    <string name="espresso">Espresso</string>
    <string name="espresso_cup">Please put cup on an click start.</string>
    <string name="connection_status">Connection status</string>
    <string name="reconnect">Reconnect</string>
    <string name="weight_title">Weight</string>
    <string name="tare">Tare</string>

    <string name="project">Project: ESPresso32</string>
    <string name="version">Version: 1.3</string>
    <string name="name">Author: Christian Eppler</string>
    <string name="email">Email: all@silentchris.de</string>
    <string name="web">Web: https://github.com/epplerc/ESPresso32</string>
    <string name="message">You have found bugs or any suggestion write me a E-Mail</string>
    <string name="osn"><u>Open Source Notices</u></string>
    <string name="licence">
Copyright 2021 Christian Eppler\n\n

Licensed under the Apache License, Version 2.0 (the "License");\n
you may not use this file except in compliance with the License.\n
You may obtain a copy of the License at\n\n

    <a href='http://www.apache.org/licenses/LICENSE-2.0'>http://www.apache.org/licenses/LICENSE-2.0</a>\n\n

Unless required by applicable law or agreed to in writing, software\n
distributed under the License is distributed on an "AS IS" BASIS,\n
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n
See the License for the specific language governing permissions and\n
limitations under the License.
    </string>
    <string name="title_activity_enable_ble">EnableBleActivity</string>
    <string name="unknown">unknown</string>
    <string name="title_activity_enable_gps">EnableGpsActivity</string>

    <string name="settings_ratio"> Ratio:</string>
    <string name="settings_rating"> Rating:</string>
    <string name="coffee"> Coffee:</string>
    <string name="settings_set_ratio"> Espresso settings:</string>
    <string name="settings_perfect_time"> Perfect time:</string>
    <string name="settings_set_perfect_time"> Set the perfect time:</string>
    <string name="settings_min_time"> Min time:</string>
    <string name="settings_set_min_time"> Set the min time:</string>
    <string name="settings_max_time"> Max time:</string>
    <string name="settings_set_max_time"> Set the max time:</string>
    <string name="settings_default_coffee_in"> Default coffee in:</string>
    <string name="settings_saved">Settings saved</string>
    <string name="remember_weight">Remember weight </string>
    <string name="note_tar">Note: Tare weight of cup.</string>
    <string name="note_waiting">Note: Waiting for first drop of espresso.</string>
    <string name="note_espresso_progress">Note: Espresso is in progress.</string>
    <string name="note_done">Note: Done.</string>
    <string name="im_export">Im-/Export</string>
    <string name="export">Export</string>
    <string name="import_data">Import</string>
    <string name="export_data">Export data to file.</string>
    <string name="import_data_from_file">Import data from file.</string>
    <string name="import_message">Import successful</string>
    <string name="export_message">Export successful</string>
    <string name="import_message_fail">Import fails</string>
    <string name="export_message_fail">Export fails</string>
    <string name="Stop">Stop</string>
    <string name="missing_permission">Not all needed permissions are granted!</string>
</resources>