<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FCFCFC"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:paddingLeft="10dp"
            android:text="@string/calibration"
            android:textColor="@color/darkgray"
            android:textSize="25dp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="5dp"
            android:background="@color/coffee" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="top"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/round_corner"
                    android:orientation="vertical">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="5dp" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center"
                            android:paddingLeft="20dp"
                            android:text="@string/calibration_set_manual"
                            android:textColor="#000"
                            android:textSize="15dp" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center"
                            android:paddingLeft="20dp"
                            android:text="@string/calibration_value"
                            android:textColor="#000"
                            android:textSize="20dp" />

                        <EditText
                            android:id="@+id/calibrateActivityCalValueManual"
                            android:layout_width="140dp"
                            android:layout_height="50dp"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center"
                            android:paddingLeft="20dp"
                            android:text=""
                            android:textColor="#000"
                            android:textSize="20dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">
                        <Button
                            android:id="@+id/setManualCalibrationButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:layout_gravity="left"
                            android:layout_marginLeft="20dp"
                            android:onClick="setCalibrationValueManual"
                            android:enabled="false"
                            android:padding="10dp"
                            android:text="@string/set"
                            android:clickable="false"
                            android:textSize="30dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center"
                            android:paddingLeft="20dp"
                            android:text="@string/calibration_set_value"
                            android:textColor="#000"
                            android:textSize="15dp" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:background="@color/coffee" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center"
                            android:paddingLeft="20dp"
                            android:text="@string/calibration_auto"
                            android:textColor="#000"
                            android:textSize="15dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center"
                            android:paddingLeft="20dp"
                            android:text="@string/calibration_start_value"
                            android:textColor="#000"
                            android:textSize="20dp" />

                        <EditText
                            android:id="@+id/calibrateActivityCalStartValue"
                            android:layout_width="140dp"
                            android:layout_height="50dp"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center"
                            android:paddingLeft="20dp"
                            android:text="5000.0"
                            android:textColor="#000"
                            android:textSize="20dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center"
                            android:paddingLeft="20dp"
                            android:text="@string/calibration_weight"
                            android:textColor="#000"
                            android:textSize="20dp" />

                        <EditText
                            android:id="@+id/calibrateActivityCalWeight"
                            android:layout_width="140dp"
                            android:layout_height="50dp"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center"
                            android:paddingLeft="20dp"
                            android:text=""
                            android:textColor="#000"
                            android:textSize="20dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_gravity="bottom"
                            android:paddingLeft="1dp"
                            android:text="@string/weight_unit"
                            android:textColor="#000"
                            android:textSize="20dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">

                        <Button
                            android:id="@+id/calibrateModus"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:layout_gravity="left"
                            android:layout_marginLeft="20dp"
                            android:onClick="calibrateModus"
                            android:enabled="false"
                            android:padding="10dp"
                            android:text="@string/start"
                            android:textSize="30dp" />

                        <TextView
                            android:id="@+id/espressoActivityNote"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center"
                            android:paddingLeft="20dp"
                            android:text="@string/calibration_start"
                            android:textColor="#000"
                            android:textSize="15dp" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"/>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center"
                            android:paddingLeft="20dp"
                            android:text="@string/status"
                            android:textColor="#000"
                            android:textSize="15dp" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center"
                            android:paddingLeft="20dp"
                            android:text="@string/modus"
                            android:textColor="#000"
                            android:textSize="20dp" />

                        <TextView
                            android:id="@+id/calibrateActivityModus"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center"
                            android:paddingLeft="20dp"
                            android:text=""
                            android:textColor="#000"
                            android:textSize="20dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center"
                            android:paddingLeft="20dp"
                            android:text="@string/weight"
                            android:textColor="#000"
                            android:textSize="20dp" />

                        <TextView
                            android:id="@+id/calibrationActivityWeight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center"
                            android:paddingLeft="20dp"
                            android:text=""
                            android:textColor="#000"
                            android:textSize="20dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center"
                            android:paddingLeft="20dp"
                            android:text="@string/calibration_value"
                            android:textColor="#000"
                            android:textSize="20dp" />

                        <TextView
                            android:id="@+id/calibrationActivityCalVal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center"
                            android:paddingLeft="20dp"
                            android:text=""
                            android:textIsSelectable="true"
                            android:textColor="#000"
                            android:textSize="20dp" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"/>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">

                        <Button
                            android:id="@+id/setCalibrationButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:layout_gravity="left"
                            android:layout_marginLeft="20dp"
                            android:onClick="setCalibrationValue"
                            android:padding="10dp"
                            android:text="@string/set"
                            android:enabled="false"
                            android:textSize="30dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center"
                            android:paddingLeft="20dp"
                            android:text="@string/calibration_set_determined"
                            android:textColor="#000"
                            android:textSize="15dp" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>